labs/6-security/1-ap-front-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: $USER_NAMESPACE-front
spec:
  {}
