labs/6-security/3-ap-ratings.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ratings-viewer
 namespace: $USER_NAMESPACE-back
spec:
 selector:
   matchLabels:
     app: ratings
 action: ALLOW
 rules:
 - from:
   - source:
       principals:
       - cluster.local/ns/$USER_NAMESPACE-back/sa/bookinfo-reviews
   to:
   - operation:
       methods:
       - GET
