labs/6-security/3-ap-reviews.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: reviews-viewer
 namespace: $USER_NAMESPACE-back
spec:
 selector:
   matchLabels:
     app: reviews
 action: ALLOW
 rules:
 - from:
   - source:
       principals:
       - cluster.local/ns/$USER_NAMESPACE-front/sa/bookinfo-productpage
   to:
   - operation:
       methods:
       - GET
